# BDA-federated-learning

./: README.md  centralized.ipynb  centralized.py  client_app.py  pyproject.toml  results.ipynb  server_app.py
flwr_covid19/: centralized.py  client_app.py  server_app.py
models/: final_model_centralized.pt  final_model_fedavg-unweighted.pt  final_model_fedavg-weighted.pt  final_model_fedprox-unweighted.pt  final_model_fedprox-weighted.pt
scripts/: vdesktop_miniconda.sh  vdesktop_venv_U2404.sh
